--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 #DB_CONNECT = mongodb://mms-automation:u8A4MFsCyRHProMtV3V7DkPU@mongo-db:27017/dhandb?authSource=admin
 # DB_CONNECT = mongodb://127.0.0.1:27017/dhandb?directConnection=
 # DB_CONNECT = mongodb://127.0.0.1:27017/dhandb
-DB_CONNECT =mongodb+srv://digiholicinfotechgithub:6no8XIXqGLm4uEu4@dhandb.ixijfma.mongodb.net/
+# DB_CONNECT =mongodb+srv://digiholicinfotechgithub:6no8XIXqGLm4uEu4@dhandb.ixijfma.mongodb.net
+DB_CONNECT =mongodb+srv://digiholicinfotechgithub:6no8XIXqGLm4uEu4@dhandb.ixijfma.mongodb.net?retryWrites=true&w=majority
+
 REGISTER_API_KEY = Iz9tVlZgksDMgWimnbaGCo5ELl+Wx4Vw
 jsonSecretToken = fcuk@ksgames123#*coolasdddsdadad
 FIREBASE_SENDER_KEY = AAAAw_VmZc4:APA91bExXIt5kCISwZFuZrzOAbVIY3jtGX-V3dzqm4MN-o_fOzph8rrGp8p5FulTEfcsbDtW3ygTPMDtykGORN3BMSu0_m254bVjyqmq8cCCy0Yc0dGYzch-LVrltUNOq5B5Ahg9ygWY
