--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # DB_CONNECT = mongodb://127.0.0.1:27017/dhandb?directConnection=
 # DB_CONNECT = mongodb://127.0.0.1:27017/dhandb
 # DB_CONNECT =mongodb+srv://digiholicinfotechgithub:6no8XIXqGLm4uEu4@dhandb.ixijfma.mongodb.net
-DB_CONNECT =mongodb+srv://digiholicinfotechgithub:6no8XIXqGLm4uEu4@dhandb.ixijfma.mongodb.net?retryWrites=true&w=majority
+DB_CONNECT = mongodb+srv://digiholicinfotechgithub:6no8XIXqGLm4uEu4@dhandb.ixijfma.mongodb.net/dhandb?retryWrites=true&w=majority
 
 REGISTER_API_KEY = Iz9tVlZgksDMgWimnbaGCo5ELl+Wx4Vw
 jsonSecretToken = fcuk@ksgames123#*coolasdddsdadad
